--- a/contact.html
+++ b/contact.html
@@ -199,7 +199,18 @@
   <br>
   <iframe src="https://script.google.com/macros/s/AKfycbwxSRO4s-hXjZCVVXdQlqjAuoA9vimrWvbdOPxFYL4Wl-_2jWSVw5yIHMuV6FD8J2qajQ/exec" frameborder="0" marginheight="0" marginwidth="0" width="100%" height="100%" scrolling="auto">
 </iframe>
-
+  <style>
+    iframe {
+      width: 80%;
+      height: 600px;
+      border: none;
+      border-radius: 5px;
+      overflow: hidden;
+      text-align: center;
+      display: block;
+      margin: 0 auto;
+    }
+  </style>
 
 <br>
 
