--- a/contact.html
+++ b/contact.html
@@ -175,8 +175,8 @@
       <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
         <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="index.html">Home</a>
         <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="project.html">Project</a>
-        <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="#">Experience</a>
-        <a class="py-2 link-body-emphasis text-decoration-none" href="contact.html">Contact</a>
+        <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="experience.html">Experience</a>
+        <a class="py-2 link-body-emphasis text-decoration-none" href="#">Contact</a>
       </nav>
     </div>
 
