--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 <div class="container py-3">
   <header>
     <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
-      <a href="/" class="d-flex align-items-center link-body-emphasis text-decoration-none">
+      <a href="index.html" class="d-flex align-items-center link-body-emphasis text-decoration-none">
       <style>
         .link-body-emphasis {
             height: 40px; /* 您可以根据需要调整高度值 */
