--- a/project.html
+++ b/project.html
@@ -198,7 +198,7 @@
   
         </div>
         <div class="image-container">
-            <img src="htmatplotlib.png" alt="圆角图片" class="rounded-image">
+            <img src="mistralai.png alt="圆角图片" class="rounded-image">
         </div>
     </div>
   </div>
