--- a/experience.html
+++ b/experience.html
@@ -185,6 +185,30 @@
     </div>
   </header>
 
+<!--LLM Lab-->
+<div id="Robotic">
+  <div class="container">
+    <div class="flex-container">
+        <div class="text-container">
+            <h6>2023 Fall - Now</h6>
+            <h1>Large Language Model Lab</h1>
+            <h4>⚲ LLM Lab, Pecu Lab</h4>
+            <br>
+            <p>Member, Model Development</p>
+            <p>National Taiwan Normal University</p>
+            <!-- <a href="https://knyliu.github.io/htmatplotlib/index.html" target="_blank" title="Website">Visit Website</a> -->
+  
+        </div>
+        <div class="image-container">
+            <img src="LLMLab.jpg" alt="圆角图片" class="rounded-image">
+        </div>
+    </div>
+  </div>
+  </div>
+  <br>
+  <hr style="border: 0.75px solid;"/>
+
+  <br>
 
 <!--Mystery of the Robotic Arm Workshop-->
 <div id="Robotic">
@@ -309,10 +333,13 @@
   }
 
   .rounded-image {
-      border-radius: 3%;
+      border-radius: 2%;
       max-width: 135%;
       height: auto;
+      box-shadow: 0 0 15px rgba(0.5, 0.5, 0.5, 0.5);
   }
+
+
   
 </style>
 
