--- a/index.html
+++ b/index.html
@@ -219,15 +219,14 @@
     <div class="text-container">
       <h1>Yen-Ku, Liu</h1>
       <h6>劉 彥 谷</h6>
-            <!--
       <br>
-
-      <h2>National Taiwan Normal University</h2>
-      <p>Department of Technology Application and Human Resource Development</p>
-      -->
+      <a href="https://github.com/knyliu" target="_blank">
+        <img src="github.png" class="logo" width="30" height="30">
+      </a>
     </div> 
     <br>
     <br>
+
     <div class="base_container">
       <div class="text-container">
         <br>
