--- a/WAS.html
+++ b/WAS.html
@@ -218,11 +218,17 @@
       <p>WAS - Wide Appointment System is a B2B2C service, offering an integrated appointment system without limitations on the field of use.</p>
       <p>It provides businesses with an easy way to set up appointment interfaces, and offers a clear interface for customers to make appointments.</p>      <!-- <h9>Javascript Product for Introduction to the Internet</h9> -->
       <br>
+      <a href="https://github.com/knyliu/WAS" target="_blank">
+        <img src="github.png" class="logo" width="30" height="30">
+      </a>
+      <br>
+      <br>
       <div class="tag">#  MongoDB</div>
       <div class="tag">#  Express</div>
       <div class="tag">#  React</div>
       <div class="tag">#  Node.JS</div>
       <div class="tag_team">#  Team Project</div>
+
     </div>
 </div>
 
