--- a/linebot_azure.html
+++ b/linebot_azure.html
@@ -183,6 +183,30 @@
     <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
 
     </div>
+    <style>
+      .tag {
+          display: inline-block;
+          padding: 2px 10px;
+          margin-right: 10px;
+          background-color: #f0f0f0;
+          border: 0.5px solid #ddd;
+          border-radius: 4px;
+          font-size: 11px;
+          color: #474747;
+          box-shadow: 1px 1px 2px rgba(0, 0, 0, 0);
+      }
+      .tag_team {
+          display: inline-block;
+          padding: 2px 10px;
+          margin-right: 10px;
+          background-color: #ffde68;
+          border: 0.5px solid #ffde68;
+          border-radius: 4px;
+          font-size: 11px;
+          color: #474747;
+          box-shadow: 1px 1px 2px rgba(0, 0, 0, 0);
+      }
+    </style>
   </header>
 
 
@@ -198,7 +222,16 @@
       <br>
       <p>LINE BOT with Azure NLP is a LINE chatbot integrated with Azure NLP technology.</p>
       <p>Users can input a piece of text and receive keyword extraction and an overall summary of the article.</p>      <!-- <h9>Javascript Product for Introduction to the Internet</h9> -->
-      <!-- <a href="https://knyliu.github.io/htmatplotlib/index.html" target="_blank" title="Website">Visit Website</a> -->
+      <br>
+      <a href="https://github.com/knyliu/LATIA112-1/tree/main/LATIA_HW3" target="_blank">
+        <img src="github.png" class="logo" width="30" height="30">
+      </a>
+      <br>
+      <br>
+      <div class="tag">#  LINE BOT</div>
+      <div class="tag">#  Azure NLP</div>
+      <br>
+      
     </div>
 </div>
 
