--- a/WAS.html
+++ b/WAS.html
@@ -426,7 +426,7 @@
     <div class="flex-container">
       <div class="text-container_1">
         <h6>4 / 4</h6>
-        <h1>Update Your Store</h1>
+        <h1>Check Your Appointments</h1>
         <p>Finally, we also provide an interface for viewing appointments. Considering that you may own multiple stores at the same time, you can choose which store's appointments to view.</p>
     </div>
         <div class="image-container">
