--- a/ProperTranslation.html
+++ b/ProperTranslation.html
@@ -218,7 +218,7 @@
       <p>A tool specifically designed for the translation of proper nouns in documents.</p>
       <p>This project, integrating data from the National Academy for Educational Research and programming, addresses the issue of current translation tools on the market being unable to accurately and correctly translate proper nouns.</p>
       <br>
-      <a href="https://github.com/knyliu/WAS" target="_blank">
+      <a href="https://github.com/knyliu/ProperTranslation" target="_blank">
         <img src="github.png" class="logo" width="30" height="30">
       </a>
       <br>
