--- a/project.html
+++ b/project.html
@@ -225,7 +225,9 @@
             <div class="tag_team">#  Team Project</div>      
             <br>
             <br>
-            <a href="ProperTranslation.html" title="Website">Visit Project</a>
+            <a href="https://propertranslation.azurewebsites.net" target="_blank" title="Website">Visit Website</a>
+            <span style="display: inline;">｜</span>
+            <a href="ProperTranslation.html" title="Website">Visit Project</a>            
             <br>
             <br>
             <a href="https://github.com/knyliu/ProperTranslation" target="_blank">
