--- a/experience.html
+++ b/experience.html
@@ -166,6 +166,30 @@
         
             }
           </style>
+                    <style>
+                      .tag {
+                          display: inline-block;
+                          padding: 2px 10px;
+                          margin-right: 10px;
+                          background-color: #f0f0f0;
+                          border: 0.5px solid #ddd;
+                          border-radius: 4px;
+                          font-size: 11px;
+                          color: #474747;
+                          box-shadow: 1px 1px 2px rgba(0, 0, 0, 0);
+                      }
+                      .tag_team {
+                          display: inline-block;
+                          padding: 2px 10px;
+                          margin-right: 10px;
+                          background-color: #ffde68;
+                          border: 0.5px solid #ffde68;
+                          border-radius: 4px;
+                          font-size: 11px;
+                          color: #474747;
+                          box-shadow: 1px 1px 2px rgba(0, 0, 0, 0);
+                      }
+                    </style>
       
         </div>
         <!-- <svg xmlns="http://www.w3.org/2000/svg" width="40" height="32" class="me-2" viewBox="0 0 118 94" role="img"><title>Bootstrap</title><path fill-rule="evenodd" clip-rule="evenodd" d="M24.509 0c-6.733 0-11.715 5.893-11.492 12.284.214 6.14-.064 14.092-2.066 20.577C8.943 39.365 5.547 43.485 0 44.014v5.972c5.547.529 8.943 4.649 10.951 11.153 2.002 6.485 2.28 14.437 2.066 20.577C12.794 88.106 17.776 94 24.51 94H93.5c6.733 0 11.714-5.893 11.491-12.284-.214-6.14.064-14.092 2.066-20.577 2.009-6.504 5.396-10.624 10.943-11.153v-5.972c-5.547-.529-8.934-4.649-10.943-11.153-2.002-6.484-2.28-14.437-2.066-20.577C105.214 5.894 100.233 0 93.5 0H24.508zM80 57.863C80 66.663 73.436 72 62.543 72H44a2 2 0 01-2-2V24a2 2 0 012-2h18.437c9.083 0 15.044 4.92 15.044 12.474 0 5.302-4.01 10.049-9.119 10.88v.277C75.317 46.394 80 51.21 80 57.863zM60.521 28.34H49.948v14.934h8.905c6.884 0 10.68-2.772 10.68-7.727 0-4.643-3.264-7.207-9.012-7.207zM49.948 49.2v16.458H60.91c7.167 0 10.964-2.876 10.964-8.281 0-5.406-3.903-8.178-11.425-8.178H49.948z" fill="currentColor"></path></svg> -->
@@ -193,6 +217,19 @@
             <h6>2023 Fall - Now</h6>
             <h1>Large Language Model Lab</h1>
             <h4>⚲ LLM Lab, Pecu Lab</h4>
+            <br>
+            <div class="tag">#  LLM</div>
+            <div class="tag">#  LLM Training</div>
+            <div class="tag_team">#  Team Work</div>
+            <br>
+            <br>
+            <a href="LLMLab.html" title="Website">Learn More</a>
+            <br>
+            <br>
+            <a href="https://github.com/Hsing-Tzu/LLMLab" target="_blank">
+              <img src="github.png" class="logo" width="30" height="30">
+            </a>
+            <br>
             <br>
             <p>Member, Model Development</p>
             <p>National Taiwan Normal University</p>
